# lab-student-survey

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  poetry-upgrade.yml  run.yml
docs/: conf.py  index.md  installation.md  usage.md
src/lab_student_survey/: analyze.py  cli.py  gdrive.py  main.py
tests/: test_main.py
