[tool.poetry]
name = "lab-student-survey"
version = "0.4.9"
description = "Python package for lab student survey"
authors = ["34j <34j.95a2p@simplelogin.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/34j/lab-student-survey"
documentation = "https://lab-student-survey.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "lab_student_survey", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/34j/lab-student-survey/issues"
"Changelog" = "https://github.com/34j/lab-student-survey/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tqdm = "^4.66.1"
pandas = "^2.1.0"
numpy = "^1.26.0"
pingouin = "^0.5.3"
click = "^8.1.7"
pydrive2 = "^1.17.0"
matplotx = "^0.3.10"
xhtml2pdf = "^0.2.11"
japanize-matplotlib = "^1.1.3"
pdfkit = "^1.0.0"

[tool.poetry.scripts]
lab-student-survey = "lab_student_survey.cli:cli"
lss = "lab_student_survey.cli:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = "src/lab_student_survey/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=lab_student_survey --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_first_party = ["lab_student_survey", "tests"]

[tool.autoflake]
expand_star_imports = true
remove_all_unused_imports = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
